--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    <script src="vega_lite_vis.js"></script>
-
+    <script src="charts.js"></script>
 </head>
 
 <body>
-    <div>Hello</div>
+    <div>Population Dynamics in Australia: Annual Trends, Migration, and Demographics</div>
     <div id="graph2"></div>
+    <div id="graph3"></div>
+    <div id="graph4"></div>
+    <div id="graph5"></div>
+    <div id="graph6"></div>
+    <div id="graph7"></div>
+    <div id="graph8"></div>
 </body>
 </html>
