--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <script src="charts.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div>Population Dynamics in Australia: Annual Trends, Migration, and Demographics</div>
-    <div id="graph2"></div>
-    <div id="graph3"></div>
-    <div id="graph4"></div>
-    <div id="graph5"></div>
-    <div id="graph6"></div>
-    <div id="graph7"></div>
-    <div id="graph8"></div>
+    <div class="grid-container">
+        <div id="graph2"></div>
+        <div id="graph3"></div>
+        <div id="graph4"></div>
+        <div id="graph5"></div>
+        <div id="graph6"></div>
+        <div id="graph7"></div>
+        <div id="graph8"></div>
+    </div>
 </body>
 </html>
