--- a/index.html
+++ b/index.html
@@ -10,17 +10,91 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <script src="charts.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Population Dynamics in Australia</title>
 </head>
 <body>
-    <div>Population Dynamics in Australia: Annual Trends, Migration, and Demographics</div>
-    <div class="grid-container">
+    <main class="grid-container">
+        
+        <!-- Title Section -->
+        <div class="title">
+            Population Dynamics in Australia
+            <div class="subtitle"><br>Tracking key statistics across national, state, and regional levels</div>
+        </div>
+
+        <div class="description">
+            This visualisation explores various aspects of Australia's population, including national and state population changes, age and gender distributions, and migration trends. 
+            The data provides insight into demographic shifts that influence social and economic planning across the country.
+        </div>
+
+        <!-- Section 1 -->
+        <div class="section-header">
+            National and Regional Population Overview
+        </div>
+
+        <!-- Choropleth -->
+        <div id="graph1"></div>
+
+        <!-- Diverginng Stacked Bar Chart -->
         <div id="graph2"></div>
+
+        <div class="description">
+            **Graph 1:** Annual Population Change by State and Territory. This choropleth map highlights population growth or decline across Australia's states and territories over the last year, reflecting the relative demographic shifts in different regions.
+        </div>
+
+        <div class="description">
+            **Graph 2:** Age and Sex Distribution by Capital Cities. A diverging stacked bar chart (population pyramid) that breaks down population by age groups and gender in Australia’s major capital cities, revealing trends in urban population structures.
+        </div>
+
+        <!-- Section 2 -->
+        <div class="section-header">
+            Natural Population Increase and Migration
+        </div>
+
+        <!-- Grouped Bar Chart -->
         <div id="graph3"></div>
-        <div id="graph4"></div>
-        <div id="graph5"></div>
+
+        <!-- Radial Plot -->
         <div id="graph6"></div>
+
+        <div class="description">
+            **Graph 3:** Natural Increase by State and Territory. This grouped bar chart illustrates the natural population growth (births minus deaths) for each Australian state and territory, giving insight into regional population sustainability.
+        </div>
+
+        <div class="description">
+            **Graph 4:** Estimated Resident Population by Proportion Born Overseas. This stacked bar chart shows the proportion of Australia’s population born overseas, providing a snapshot of the country’s multicultural makeup.
+        </div>
+
+        <!-- Stacked Bar Chart -->
+        <div id="graph5"></div>
+
+        <div class="description">
+            **Graph 5:** Estimated Resident Population by Country of Birth. Using a radial plot, this graph visualizes the diversity of Australia's population by country of birth, highlighting the top contributing countries.
+        </div>
+
+        <!-- Section 3 -->
+        <div class="section-header">
+            Migration Trends
+        </div>
+
+        <!-- Grouped Bar Chart -->
         <div id="graph7"></div>
+
+        <!-- Grouped Bar Chart -->
         <div id="graph8"></div>
-    </div>
+
+        <div class="description">
+            **Graph 6:** Annual Net Overseas Migration by State and Territory. This grouped bar chart represents the net overseas migration for each state and territory, showing how international migration impacts population growth at the state level.
+        </div>
+
+        <div class="description">
+            **Graph 7:** Annual Net Interstate Migration by State and Territory. This grouped bar chart tracks population movement between states and territories, revealing internal migration patterns within Australia.
+        </div>
+
+        <!-- Footer Section -->
+        <div class="footer">
+            Data Source: Australian Bureau of Statistics (ABS) | Visualisation by Amy Huang Xiao © 2024
+        </div>
+
+    </main>
 </body>
 </html>
