--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Section 1 -->
         <div class="section-header">
-            National and Regional Population Overview
+            National and Regional Population
         </div>
 
         <!-- Choropleth -->
@@ -47,7 +47,7 @@
 
         <!-- Section 2 -->
         <div class="section-header">
-            Natural Population Increase and Migration
+            Natural Growth and Country of Birth
         </div>
 
         <!-- Grouped Bar Chart -->
@@ -73,7 +73,7 @@
 
         <!-- Section 3 -->
         <div class="section-header">
-            Migration Trends
+            Key Migration Patterns 
         </div>
 
         <!-- Grouped Bar Chart -->
