--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </div>
 
         <div class="description">
-            This visualisation explores various aspects of Australia's population, including national and state population changes, age and gender distributions, and migration trends. 
-            The data provides insight into demographic shifts that influence social and economic planning across the country.
+            
         </div>
 
         <!-- Section 1 -->
@@ -38,11 +37,11 @@
         <div id="graph2"></div>
 
         <div class="description">
-            **Graph 1:** Annual Population Change by State and Territory. This choropleth map highlights population growth or decline across Australia's states and territories over the last year, reflecting the relative demographic shifts in different regions.
+            **Graph 1:** Annual Population Change by State and Territory. 
         </div>
 
         <div class="description">
-            **Graph 2:** Age and Sex Distribution by Capital Cities. A diverging stacked bar chart (population pyramid) that breaks down population by age groups and gender in Australia’s major capital cities, revealing trends in urban population structures.
+            **Graph 2:** Age and Sex Distribution by Capital Cities.
         </div>
 
         <!-- Section 2 -->
@@ -57,18 +56,18 @@
         <div id="graph4"></div>
 
         <div class="description">
-            **Graph 3:** Natural Increase by State and Territory. This grouped bar chart illustrates the natural population growth (births minus deaths) for each Australian state and territory, giving insight into regional population sustainability.
+            **Graph 3:** Natural Increase by State and Territory.
         </div>
 
         <div class="description">
-            **Graph 4:** Estimated Resident Population by Proportion Born Overseas. This stacked bar chart shows the proportion of Australia’s population born overseas, providing a snapshot of the country’s multicultural makeup.
+            **Graph 4:** Estimated Resident Population by Proportion Born Overseas.
         </div>
 
         <!-- Stacked Bar Chart -->
         <div id="graph5"></div>
 
         <div class="description">
-            **Graph 5:** Estimated Resident Population by Country of Birth. Using a radial plot, this graph visualizes the diversity of Australia's population by country of birth, highlighting the top contributing countries.
+            **Graph 5:** Estimated Resident Population by Country of Birth.
         </div>
 
         <!-- Section 3 -->
@@ -83,16 +82,16 @@
         <div id="graph7"></div>
 
         <div class="description">
-            **Graph 6:** Annual Net Overseas Migration by State and Territory. This grouped bar chart represents the net overseas migration for each state and territory, showing how international migration impacts population growth at the state level.
+            **Graph 6:** Annual Net Overseas Migration by State and Territory.
         </div>
 
         <div class="description">
-            **Graph 7:** Annual Net Interstate Migration by State and Territory. This grouped bar chart tracks population movement between states and territories, revealing internal migration patterns within Australia.
+            **Graph 7:** Annual Net Interstate Migration by State and Territory. 
         </div>
 
         <!-- Footer Section -->
         <div class="footer">
-            Data Source: Australian Bureau of Statistics (ABS) | Visualisation by Amy Huang Xiao © 2024
+            © Amy 2024    |    A visualisation created by Amy using Vega-Lite    |    Data provided by the Australian Bureau of Statistics   
         </div>
 
     </main>
