Updated all graphs, html and css files

--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
         <!-- Title Section -->
         <div class="title">
             Population Dynamics in Australia
-            <div class="subtitle"><br>Tracking key statistics across national, state, and regional levels</div>
+            <div class="subtitle"><br>Tracking Key Statistics Across National, State, and Regional Levels</div>
         </div>
 
         <div class="description">
-            
+            This in-depth analysis of Australia’s population dynamics highlights key trends in regional growth, age distribution, natural increase, multiculturalism, and migration. 
+            Significant variations across states and territories illustrate how economic opportunities, lifestyle preferences, and demographic shifts shape the nation’s population landscape. 
+            As Australia continues to evolve, understanding these trends is essential for informed policymaking and effective community planning.
         </div>
 
         <!-- Section 1 -->
         <div class="section-header">
-            National and Regional Population
+            Population Growth Trends
         </div>
 
         <!-- Choropleth -->
@@ -37,16 +39,21 @@
         <div id="graph2"></div>
 
         <div class="description">
-            **Graph 1:** Annual Population Change by State and Territory. 
+            Australia's population growth showed regional differences, with Western Australia leading at 3.1%, boosted by the mining and energy sectors. 
+            Victoria (2.7%) and Queensland (2.5%) followed, driven by urban migration. 
+            New South Wales maintained steady growth at 2%, keeping its status as the most populous state. 
+            In contrast, Tasmania (0.4%) and the Northern Territory (0.8%) recorded the slowest growth rates.
         </div>
 
         <div class="description">
-            **Graph 2:** Age and Sex Distribution by Capital Cities.
+            Age distribution shows a slightly higher proportion of young children (0-4) in cities, with 2.96% of males and 2.81% of females in urban areas. 
+            This trend continues across age groups, as families favour cities for better healthcare, education, and employment opportunities. 
+            For instance, 3.63% of males aged 20-24 reside in cities, compared to 2.81% in regional areas, highlighting growing pressure on urban infrastructure and services.
         </div>
 
         <!-- Section 2 -->
         <div class="section-header">
-            Natural Growth and Country of Birth
+            Population Change Drivers
         </div>
 
         <!-- Grouped Bar Chart -->
@@ -56,23 +63,29 @@
         <div id="graph4"></div>
 
         <div class="description">
-            **Graph 3:** Natural Increase by State and Territory.
+            Natural growth (births minus deaths) varies by state, with Victoria (31,682) and New South Wales (30,776) leading due to higher birth rates and younger populations. 
+            Queensland follows at 20,872, while South Australia (2,921) and Tasmania (321) see minimal growth, reflecting ageing demographics. 
+            These trends indicate some states may depend more on natural growth, while others may need policies to increase birth rates or migration.
         </div>
 
         <div class="description">
-            **Graph 4:** Estimated Resident Population by Proportion Born Overseas.
+            Australia's multicultural landscape continues to expand, with approximately 8.18 million residents born overseas, accounting for about 30% of the total population. 
+            England, India, and China are the leading countries of origin for migrants, comprising 3.6%, 3.2%, and 2.5% of the population, respectively. 
+            This influx has enriched Australia’s cultural diversity and contributed significantly to its economic vitality.
         </div>
 
         <!-- Stacked Bar Chart -->
         <div id="graph5"></div>
 
         <div class="description">
-            **Graph 5:** Estimated Resident Population by Country of Birth.
+            Over the last few decades, the number of Australians born overseas has steadily increased, reaching 8.18 million in 2023, up from 3.89 million in 1990. 
+            This growth illustrates Australia’s increasing dependence on migration to sustain population growth, diversify the workforce, and support the economy. 
+            The proportion of overseas-born residents has risen from 23% in 1990 to over 30% today, highlighting the need to foster inclusive communities to ensure societal well-being.
         </div>
 
         <!-- Section 3 -->
         <div class="section-header">
-            Key Migration Patterns 
+            Migration Trends Impacts
         </div>
 
         <!-- Grouped Bar Chart -->
@@ -82,16 +95,21 @@
         <div id="graph7"></div>
 
         <div class="description">
-            **Graph 6:** Annual Net Overseas Migration by State and Territory.
+            Net overseas migration is a significant driver of population growth, particularly in New South Wales (168,148), Victoria (151,740), and Queensland (82,794). 
+            These states attract most international arrivals due to favourable job opportunities and educational institutions. 
+            Conversely, states such as Tasmania (4,704) and the Northern Territory (3,920) face challenges in attracting newcomers, reflecting their more limited economic prospects.
         </div>
 
         <div class="description">
-            **Graph 7:** Annual Net Interstate Migration by State and Territory. 
+            Queensland emerged as a top destination for internal migration, gaining 30,930 residents, primarily from New South Wales, which saw a net loss of 31,183. 
+            This shift reflects preferences for Queensland’s climate and affordable housing. 
+            Western Australia also experienced a net increase of 10,039, suggesting its appeal to job seekers. 
+            In contrast, Victoria’s small net gain (537) indicates stable migration patterns and balanced population dynamics.
         </div>
 
         <!-- Footer Section -->
         <div class="footer">
-            © Amy 2024    |    A visualisation created by Amy using Vega-Lite    |    Data provided by the Australian Bureau of Statistics   
+            A visualisation created by Amy Huang Xiao using Vega-Lite   |   Data provided by the Australian Bureau of Statistics   |   ChatGPT (GPT-3.5) was used to improve the wording of specific passages
         </div>
 
     </main>
