Updated graphs, html and css files

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- Footer Section -->
         <div class="footer">
-            A visualisation created by Amy Huang Xiao using Vega-Lite   |   Data provided by the Australian Bureau of Statistics   |   ChatGPT (GPT-3.5) was used to improve the wording of specific passages
+            Visualisation created by Amy Huang Xiao using Vega-Lite   |   Data provided by the Australian Bureau of Statistics   |   Text improvements by ChatGPT (GPT-3.5)
         </div>
 
     </main>
